[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/ui/input-color/input_color.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/icon/back.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/icon/custom.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/icon/pick_color.png" type="Texture" id=6]

[node name="input_color" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 593.0
margin_bottom = 113.0

[node name="back" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 106.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="TextureRect" parent="VBoxContainer/PanelContainer/HBoxContainer/back"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin" type="CenterContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 482.0
margin_bottom = 106.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer/margin"]
margin_left = 102.0
margin_top = 33.0
margin_right = 276.0
margin_bottom = 73.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Pick Color"
align = 1
valign = 1

[node name="custom" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 486.0
margin_right = 586.0
margin_bottom = 106.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="TextureRect" parent="VBoxContainer/PanelContainer/HBoxContainer/custom"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pallete" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
visible = false
margin_left = 486.0
margin_right = 586.0
margin_bottom = 106.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="TextureRect" parent="VBoxContainer/PanelContainer/HBoxContainer/pallete"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="custom" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 600.0
margin_bottom = 953.0
size_flags_vertical = 3

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer/custom"]
margin_right = 600.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="hbox2" type="HBoxContainer" parent="VBoxContainer/custom"]
margin_top = 44.0
margin_right = 600.0
margin_bottom = 244.0
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/custom/hbox2"]
margin_right = 196.0
margin_bottom = 200.0
rect_min_size = Vector2( 10, 0 )
size_flags_horizontal = 3

[node name="item" type="ColorRect" parent="VBoxContainer/custom/hbox2"]
margin_left = 200.0
margin_right = 400.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
mouse_filter = 1
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="color" type="ColorRect" parent="VBoxContainer/custom/hbox2/item"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_min_size = Vector2( 180, 180 )
mouse_filter = 1
size_flags_horizontal = 3
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/custom/hbox2"]
margin_left = 404.0
margin_right = 600.0
margin_bottom = 200.0
rect_min_size = Vector2( 10, 0 )
size_flags_horizontal = 3

[node name="Label7" type="Label" parent="VBoxContainer/custom"]
margin_top = 248.0
margin_right = 600.0
margin_bottom = 288.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Custom Color"
align = 1
valign = 1

[node name="R" type="VBoxContainer" parent="VBoxContainer/custom"]
margin_top = 292.0
margin_right = 600.0
margin_bottom = 396.0

[node name="MarginContainer8" type="MarginContainer" parent="VBoxContainer/custom/R"]
margin_right = 600.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="hbox2" type="HBoxContainer" parent="VBoxContainer/custom/R"]
margin_top = 44.0
margin_right = 600.0
margin_bottom = 84.0
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/custom/R/hbox2"]
margin_right = 10.0
margin_bottom = 40.0
rect_min_size = Vector2( 10, 0 )

[node name="Label6" type="Label" parent="VBoxContainer/custom/R/hbox2"]
margin_left = 14.0
margin_right = 586.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "R : 0"
valign = 1

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/custom/R/hbox2"]
margin_left = 590.0
margin_right = 600.0
margin_bottom = 40.0
rect_min_size = Vector2( 10, 0 )

[node name="hbox" type="HBoxContainer" parent="VBoxContainer/custom/R"]
margin_top = 88.0
margin_right = 600.0
margin_bottom = 104.0
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/custom/R/hbox"]
margin_right = 10.0
margin_bottom = 16.0
rect_min_size = Vector2( 10, 0 )

[node name="R_slider" type="HSlider" parent="VBoxContainer/custom/R/hbox"]
margin_left = 14.0
margin_right = 586.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/custom/R/hbox"]
margin_left = 590.0
margin_right = 600.0
margin_bottom = 16.0
rect_min_size = Vector2( 10, 0 )

[node name="G" type="VBoxContainer" parent="VBoxContainer/custom"]
margin_top = 400.0
margin_right = 600.0
margin_bottom = 504.0

[node name="MarginContainer8" type="MarginContainer" parent="VBoxContainer/custom/G"]
margin_right = 600.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="hbox2" type="HBoxContainer" parent="VBoxContainer/custom/G"]
margin_top = 44.0
margin_right = 600.0
margin_bottom = 84.0
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/custom/G/hbox2"]
margin_right = 10.0
margin_bottom = 40.0
rect_min_size = Vector2( 10, 0 )

[node name="Label6" type="Label" parent="VBoxContainer/custom/G/hbox2"]
margin_left = 14.0
margin_right = 586.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "G : 0"
valign = 1

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/custom/G/hbox2"]
margin_left = 590.0
margin_right = 600.0
margin_bottom = 40.0
rect_min_size = Vector2( 10, 0 )

[node name="hbox" type="HBoxContainer" parent="VBoxContainer/custom/G"]
margin_top = 88.0
margin_right = 600.0
margin_bottom = 104.0
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/custom/G/hbox"]
margin_right = 10.0
margin_bottom = 16.0
rect_min_size = Vector2( 10, 0 )

[node name="G_slider" type="HSlider" parent="VBoxContainer/custom/G/hbox"]
margin_left = 14.0
margin_right = 586.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/custom/G/hbox"]
margin_left = 590.0
margin_right = 600.0
margin_bottom = 16.0
rect_min_size = Vector2( 10, 0 )

[node name="B" type="VBoxContainer" parent="VBoxContainer/custom"]
margin_top = 508.0
margin_right = 600.0
margin_bottom = 612.0

[node name="MarginContainer8" type="MarginContainer" parent="VBoxContainer/custom/B"]
margin_right = 600.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="hbox2" type="HBoxContainer" parent="VBoxContainer/custom/B"]
margin_top = 44.0
margin_right = 600.0
margin_bottom = 84.0
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/custom/B/hbox2"]
margin_right = 10.0
margin_bottom = 40.0
rect_min_size = Vector2( 10, 0 )

[node name="Label6" type="Label" parent="VBoxContainer/custom/B/hbox2"]
margin_left = 14.0
margin_right = 586.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "B : 0"
valign = 1

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/custom/B/hbox2"]
margin_left = 590.0
margin_right = 600.0
margin_bottom = 40.0
rect_min_size = Vector2( 10, 0 )

[node name="hbox" type="HBoxContainer" parent="VBoxContainer/custom/B"]
margin_top = 88.0
margin_right = 600.0
margin_bottom = 104.0
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/custom/B/hbox"]
margin_right = 10.0
margin_bottom = 16.0
rect_min_size = Vector2( 10, 0 )

[node name="B_slider" type="HSlider" parent="VBoxContainer/custom/B/hbox"]
margin_left = 14.0
margin_right = 586.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/custom/B/hbox"]
margin_left = 590.0
margin_right = 600.0
margin_bottom = 16.0
rect_min_size = Vector2( 10, 0 )

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer/custom"]
margin_top = 616.0
margin_right = 600.0
margin_bottom = 696.0
rect_min_size = Vector2( 0, 80 )
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/custom"]
margin_top = 700.0
margin_right = 600.0
margin_bottom = 800.0
rect_min_size = Vector2( 0, 100 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/custom/HBoxContainer"]
margin_right = 10.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 0 )

[node name="continue" type="Button" parent="VBoxContainer/custom/HBoxContainer"]
margin_left = 14.0
margin_right = 586.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Continue"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/custom/HBoxContainer"]
margin_left = 590.0
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 0 )

[node name="MarginContainer7" type="MarginContainer" parent="VBoxContainer/custom"]
margin_top = 804.0
margin_right = 600.0
margin_bottom = 829.0
rect_min_size = Vector2( 0, 25 )

[node name="pallete" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 957.0
margin_right = 600.0
margin_bottom = 1024.0
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="GridContainer" parent="VBoxContainer/pallete"]
margin_right = 600.0
size_flags_horizontal = 3
columns = 3

[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/custom" to="." method="_on_custom_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/pallete" to="." method="_on_pallete_pressed"]
[connection signal="value_changed" from="VBoxContainer/custom/R/hbox/R_slider" to="." method="_on_R_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/custom/G/hbox/G_slider" to="." method="_on_G_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/custom/B/hbox/B_slider" to="." method="_on_B_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/custom/HBoxContainer/continue" to="." method="_on_continue_pressed"]
